src/test/deca/syntax/valid/provided/Cast.deca
// DESCRIPTION: test sur des cast

class alpha{

	int a = (int) (1.0);
	int b = (int) (true);
	//alpha b = (beta) (c);
  //      void cast(){
		// float a = (float) (1);
      //   	beta b = (alpha) (c);
					//}
}
