src/test/deca/syntax/invalid/provided/bad_declaration.deca
class test extends {
  protected float a = 1.6;
  public int c = 4;
  protected bool b = true ;
  }
